whip it into shape

--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,9 @@
   "tasks": {
     "dev": "deno test --watch"
   },
+  "fmt": {
+    "semiColons": false
+  },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   },
