set deno-version to latest stable

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -18,10 +18,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Deno
-        # uses: denoland/setup-deno@v1
         uses: denoland/setup-deno@v2
         with:
-          deno-version: lts
+          deno-version: vx.x.x
 
       - name: Verify formatting
         run: deno fmt --check
