--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@rotu/structview",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "license": "MIT",
   "tasks": {
     "dev": "deno test --watch"
@@ -10,7 +10,8 @@
   },
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.42.3",
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "uint8array-extras": "npm:uint8array-extras@^1.5.0"
   },
   "exports": {
     ".": "./mod.ts",
